--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "algolia/algoliasearch-client-php": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "lunarphp/lunar": "^1.0.0-alpha"
+        "lunarphp/lunar": "^1.0.0-alpha",
+        "lunarphp/meilisearch": "*",
+        "meilisearch/meilisearch-php": "^1.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -61,7 +65,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "dev",
